# goatpaver

./: Cargo.toml  go.mod  go.sum  main.go  main_test.go
go_goat/: main.go
schemas/: input.schema.json  output.schema.json
src/: main.rs
