[package]
name = "goatpaver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sxd-document = "0.3"
sxd-xpath = "0.4"
# --- Added dependencies ---
async_nursery = "0.6.0"
async_executors = { version = "0.7", features = ["async_std"] }
async-std = { version = "1.13.1", features = ["attributes"] }
futures = "0.3"
# --- End added dependencies ---
jsonschema = "0.17"
