[package]
name = "goatpaver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# --- Added dependencies ---
async_nursery = "0.6.0"
async_executors = { version = "0.7", features = ["async_std"] }
async-std = { version = "1.13.1", features = ["attributes"] }
futures = "0.3"
skyscraper = "0.6.4" # Replaced html5ever, markup5ever_rcdom, sxd-document, sxd-xpath
# --- End added dependencies ---

[dev-dependencies] # Add dev-dependencies section if it doesn't exist
gag = "1.0" # Add gag crate
jsonschema = "0.17"
